various changes to DES fields

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.8.2_DES.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.8.2_DES.ipynb
@@ -640,7 +640,7 @@
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec,  near_ra0=True)"
    ]
   },
   {
@@ -693,7 +693,7 @@
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec,  near_ra0=True)"
    ]
   },
   {
