--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
@@ -505,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for col in master_catalogue.colnames:\n",
@@ -943,7 +945,9 @@
     "master_catalogue[id_names].write(\n",
     "    \"{}/master_list_cross_ident_herschel-stripe-82{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
-    "#master_catalogue.remove_columns(id_names)"
+    "old_id_names =[\"shela_intid\",\"spies_intid\",\"decals_id\",\"des_id\"] \n",
+    "id_names.remove(old_id_names)\n",
+    "master_catalogue.remove_columns(old_id_names)"
    ]
   },
   {
@@ -1056,7 +1060,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "surveys = [\n",
@@ -1116,7 +1122,20 @@
     "                               keys=survey[3]\n",
     "                            )\n",
     "    #print('Finished join')\n",
-    "    #sub_catalogue.remove_columns(id_names)\n",
+    "    sub_catalogue.remove_columns(id_names)\n",
+    "    \n",
+    "    for col in sub_catalogue.colnames:\n",
+    "        if (col.startswith(\"m_\") or col.startswith(\"merr_\") or col.startswith(\"f_\") or col.startswith(\"ferr_\")):\n",
+    "            sub_catalogue[col] = sub_catalogue[col].astype(float)\n",
+    "            sub_catalogue[col].fill_value = np.nan\n",
+    "        if \"stellarity\" in col:\n",
+    "            sub_catalogue[col].fill_value = np.nan\n",
+    "        elif \"flag\" in col:\n",
+    "            sub_catalogue[col].fill_value = 0\n",
+    "        elif \"id\" in col:\n",
+    "            sub_catalogue[col].fill_value = -1\n",
+    "        \n",
+    "    sub_catalogue = master_catalogue.filled()\n",
     "    \n",
     "    #Adding detection flag\n",
     "    \n",
