--- a/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
+++ b/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
@@ -628,7 +628,7 @@
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_SGP.fits\")\n",
-    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
+    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'],  near_ra0=True)"
    ]
   },
   {
@@ -693,7 +693,7 @@
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec,  near_ra0=True)"
    ]
   },
   {
