--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -860,7 +860,7 @@
    ],
    "source": [
     "for col in master_catalogue.colnames:\n",
-    "    print(col)\n",
+    "    #print(col)\n",
     "    if (col.startswith(\"m_\") or col.startswith(\"merr_\") or col.startswith(\"f_\") or col.startswith(\"ferr_\")):\n",
     "        master_catalogue[col] = master_catalogue[col].astype(float)\n",
     "        master_catalogue[col].fill_value = np.nan\n",
@@ -1437,7 +1437,7 @@
     "#Sort catalogue by HELP id so that it is split up in RA strips\n",
     "master_catalogue.sort('help_id')\n",
     "#Remove all the old ids as they interfere with join\n",
-    "master_catalogue.remove_columns([\n",
+    "old_id_names = [\n",
     " 'cfhtls-wide_id',\n",
     " 'cfhtls-deep_id',\n",
     " 'sparcs_intid',\n",
@@ -1458,7 +1458,8 @@
     "\n",
     " 'servs_intid',\n",
     " 'swire_intid']\n",
-    ")"
+    "master_catalogue.remove_columns(old_id_names)\n",
+    "id_names.remove(old_id_names)"
    ]
   },
   {
@@ -1529,7 +1530,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=0\n",
@@ -1624,7 +1627,17 @@
     "\n",
     "    sub_catalogue.remove_columns(stellarity_columns)\n",
     "\n",
-    "\n",
+    "    for col in sub_catalogue.colnames:\n",
+    "        #print(col)\n",
+    "        if (col.startswith(\"m_\") or col.startswith(\"merr_\") or col.startswith(\"f_\") or col.startswith(\"ferr_\")):\n",
+    "            sub_catalogue[col] = sub_catalogue[col].astype(float)\n",
+    "            sub_catalogue[col].fill_value = np.nan\n",
+    "        elif \"flag\" in col:\n",
+    "            sub_catalogue[col].fill_value = 0\n",
+    "        elif \"id\" in col:\n",
+    "            sub_catalogue[col].fill_value = -1\n",
+    "        \n",
+    "    sub_catalogue = sub_catalogue.filled()\n",
     "        \n",
     "        \n",
     "    nb_optical_flux = (\n",
@@ -1693,7 +1706,7 @@
     "    )\n",
     "        \n",
     "    #print('Finished join')\n",
-    "    #sub_catalogue.remove_columns(id_names)\n",
+    "    sub_catalogue.remove_columns(id_names)\n",
     "    sub_catalogue.write(\"{}/tiles/sub_catalogue_xmm-lss{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
    ]
