Producing CDFS-SWIRE cat for Cigalle run with specz
as temporary test running cigalle on specz objects

--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -207,13 +207,28 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "photoz.meta = None\n",
+    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
+    "#photoz.meta = None\n",
     "\n",
-    "photoz = photoz['help_id', 'z1_median']\n",
-    "photoz['z1_median'].name = 'redshift'\n",
+    "#photoz = photoz['help_id', 'z1_median']\n",
+    "#photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Temp spec-z\n",
+    "\n",
+    "ml['zspec'].name = 'redshift'\n",
+    "\n",
+    "specz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -288,11 +303,11 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, photoz, join_type='left')\n",
+    "#merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
-    "merged_table['redshift'].fill_value = np.nan\n",
-    "merged_table = merged_table.filled()"
+    "#merged_table['redshift'].fill_value = np.nan\n",
+    "#merged_table = merged_table.filled()"
    ]
   },
   {
@@ -355,44 +370,46 @@
    },
    "outputs": [],
    "source": [
-    "# Cigale outputs\n",
-    "cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
-    "cigale['id'].name = \"help_id\"\n",
+    "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "# We convert the various Chi2 and threshold to flags\n",
-    "flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "flag_cigale = (\n",
-    "    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "    flag_cigale_opt & flag_cigale_ir)\n",
-    "flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    # Cigale outputs\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale['id'].name = \"help_id\"\n",
     "\n",
-    "cigale.add_columns([\n",
-    "    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                 dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                 dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                 dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                 dtype=int, fill_value=-1)\n",
-    "])\n",
+    "    # We convert the various Chi2 and threshold to flags\n",
+    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    flag_cigale = (\n",
+    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "        flag_cigale_opt & flag_cigale_ir)\n",
+    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
-    "cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
-    "cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
-    "cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
-    "cigale['UVoptIR_bayes.sfh.sfr10Myrs_err'].name = \"cigale_sfr_err\"\n",
-    "cigale['UVoptIR_bayes.dust.luminosity'].name = \"cigale_dustlumin\"\n",
-    "cigale['UVoptIR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_err\"\n",
-    "cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
-    "cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
+    "    cigale.add_columns([\n",
+    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "                     dtype=int, fill_value=-1)\n",
+    "    ])\n",
     "\n",
-    "cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
-    "                'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
-    "                'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                'flag_cigale_ironly']"
+    "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
+    "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
+    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
+    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs_err'].name = \"cigale_sfr_err\"\n",
+    "    cigale['UVoptIR_bayes.dust.luminosity'].name = \"cigale_dustlumin\"\n",
+    "    cigale['UVoptIR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_err\"\n",
+    "    cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
+    "    cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
+    "\n",
+    "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
+    "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
+    "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
+    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
+    "                    'flag_cigale_ironly']"
    ]
   },
   {
@@ -403,15 +420,17 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, cigale, join_type='left')\n",
+    "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "# Fill values\n",
-    "for col in cigale.colnames:\n",
-    "    if col.startswith(\"cigale_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = -1\n",
-    "merged_table = merged_table.filled()"
+    "    merged_table = join(merged_table, cigale, join_type='left')\n",
+    "\n",
+    "    # Fill values\n",
+    "    for col in cigale.colnames:\n",
+    "        if col.startswith(\"cigale_\"):\n",
+    "            merged_table[col].fill_value = np.nan\n",
+    "        elif col.startswith(\"flag_\"):\n",
+    "            merged_table[col].fill_value = -1\n",
+    "    merged_table = merged_table.filled()"
    ]
   },
   {
@@ -431,9 +450,11 @@
    },
    "outputs": [],
    "source": [
-    "bands = [col[2:] for col in merged_table.colnames\n",
-    "         if col.startswith('f_') and not col.startswith('f_ap')]\n",
-    "bands.sort(key=lambda x: filter_mean_lambda[x])"
+    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "\n",
+    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands.sort(key=lambda x: filter_mean_lambda[x])"
    ]
   },
   {
@@ -444,21 +465,23 @@
    },
    "outputs": [],
    "source": [
-    "columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
-    "for band in bands:\n",
-    "    for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
-    "                    'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
-    "                    'flag_{}']:\n",
-    "        colname = col_tpl.format(band)\n",
-    "        if colname in merged_table.colnames:\n",
-    "            columns.append(colname)\n",
-    "columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
-    "            'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "            'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "            'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
-    "            'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
-    "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
-    "            'zspec_association_flag']"
+    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "\n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
+    "    for band in bands:\n",
+    "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
+    "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
+    "                        'flag_{}']:\n",
+    "            colname = col_tpl.format(band)\n",
+    "            if colname in merged_table.colnames:\n",
+    "                columns.append(colname)\n",
+    "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
+    "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
+    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
+    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
+    "                'zspec_association_flag']"
    ]
   },
   {
@@ -469,8 +492,10 @@
    },
    "outputs": [],
    "source": [
-    "# Check that we did not forget any column\n",
-    "assert set(columns) == set(merged_table.colnames)"
+    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "\n",
+    "    # Check that we did not forget any column\n",
+    "    assert set(columns) == set(merged_table.colnames)"
    ]
   },
   {
@@ -488,7 +513,9 @@
    },
    "outputs": [],
    "source": [
-    "merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "\n",
+    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
    ]
   }
  ],
@@ -508,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
