--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "ml['zspec'].name = 'redshift'\n",
     "\n",
-    "specz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -347,7 +347,7 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)\n",
+    "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE_cigale.fits\")"
