Validation outputs and flags notebook (updated)

--- a/dmu6/dmu6_v_CDFS-SWIRE/4_flags_cdfs-swire.ipynb
+++ b/dmu6/dmu6_v_CDFS-SWIRE/4_flags_cdfs-swire.ipynb
@@ -115,6 +115,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.c IRAC Aperture magnitudes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "irac_mag = 3.9000000001085695\n",
+    "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
+    "\n",
+    "for i, band in enumerate(bands):\n",
+    "    print(band)\n",
+    "    basecol = band.replace(\" \", \"_\").lower()\n",
+    "    \n",
+    "    ecol_ap = \"merr_ap_{}\".format(basecol)\n",
+    "    flagcol_ap = \"flag_{}_ap\".format(basecol)\n",
+    "    \n",
+    "    mask_ap  = np.where(master_catalogue[ecol_ap]  == irac_mag)[0]\n",
+    "    \n",
+    "    print('  Aperture magnitude')\n",
+    "    flag_mag(flagcol_ap, mask_ap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Outliers"
    ]
   },
