IRAC renaming and merging on CDFS-SWIRE
including Candels and going to new foramt _camera_band #6

--- a/dmu1/dmu1_ml_CDFS-SWIRE/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/2_Merging.ipynb
@@ -794,9 +794,9 @@
    "source": [
     "## VII - Choosing between multiple values for the same filter\n",
     "\n",
-    "### VII.a SERVS vs SWIRE\n",
+    "### VII.a SERVS vs SWIRE vs CANDELS\n",
     "\n",
-    "Both SERVS and SWIRE provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes."
+    "Both SERVS and SWIRE provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes. On a small section there are also CANDELS forced irac fluxes which since thay are very deep we always take preferentially."
    ]
   },
   {
@@ -925,6 +925,8 @@
     "has_swire = ~np.isnan(master_catalogue['f_ap_swire_irac1'])\n",
     "has_both = has_servs & has_swire\n",
     "\n",
+    "\n",
+    "\n",
     "print(\"{} sources with SERVS flux\".format(np.sum(has_servs)))\n",
     "print(\"{} sources with SWIRE flux\".format(np.sum(has_swire)))\n",
     "print(\"{} sources with SERVS and SWIRE flux\".format(np.sum(has_both)))\n",
@@ -932,32 +934,38 @@
     "has_servs_above_limit = has_servs.copy()\n",
     "has_servs_above_limit[has_servs] = master_catalogue['f_ap_servs_irac1'][has_servs] > 2000\n",
     "\n",
-    "use_swire = (has_swire & ~has_servs) | (has_both & has_servs_above_limit)\n",
-    "use_servs = (has_servs & ~(has_both & has_servs_above_limit))\n",
+    "\n",
+    "use_swire = ((has_swire & ~has_servs) | (has_both & has_servs_above_limit))\n",
+    "use_servs =  ((has_servs & ~(has_both & has_servs_above_limit)))\n",
     "\n",
     "print(\"{} sources for which we use SERVS\".format(np.sum(use_servs)))\n",
     "print(\"{} sources for which we use SWIRE\".format(np.sum(use_swire)))\n",
+    "\n",
     "\n",
     "f_ap_irac = np.full(len(master_catalogue), np.nan)\n",
     "f_ap_irac[use_servs] = master_catalogue['f_ap_servs_irac1'][use_servs]\n",
     "f_ap_irac[use_swire] = master_catalogue['f_ap_swire_irac1'][use_swire]\n",
     "\n",
+    "\n",
     "ferr_ap_irac = np.full(len(master_catalogue), np.nan)\n",
     "ferr_ap_irac[use_servs] = master_catalogue['ferr_ap_servs_irac1'][use_servs]\n",
     "ferr_ap_irac[use_swire] = master_catalogue['ferr_ap_swire_irac1'][use_swire]\n",
+    "\n",
     "\n",
     "m_ap_irac = np.full(len(master_catalogue), np.nan)\n",
     "m_ap_irac[use_servs] = master_catalogue['m_ap_servs_irac1'][use_servs]\n",
     "m_ap_irac[use_swire] = master_catalogue['m_ap_swire_irac1'][use_swire]\n",
     "\n",
+    "\n",
     "merr_ap_irac = np.full(len(master_catalogue), np.nan)\n",
     "merr_ap_irac[use_servs] = master_catalogue['merr_ap_servs_irac1'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_ap_swire_irac1'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac1\"))\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac_i1\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_ap_servs_irac1', 'f_ap_swire_irac1', 'ferr_ap_servs_irac1',\n",
     "                                     'ferr_ap_swire_irac1', 'm_ap_servs_irac1', 'm_ap_swire_irac1',\n",
@@ -966,6 +974,7 @@
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[use_servs] = \"SERVS\"\n",
     "origin[use_swire] = \"SWIRE\"\n",
+    "\n",
     "irac_origin.add_column(Column(data=origin, name=\"IRAC1_ap\"))"
    ]
   },
@@ -992,52 +1001,69 @@
     "has_swire = ~np.isnan(master_catalogue['f_swire_irac1'])\n",
     "has_both = has_servs & has_swire\n",
     "\n",
+    "has_candels = ~np.isnan(master_catalogue['f_candels-irac_i1'])\n",
+    "\n",
     "print(\"{} sources with SERVS flux\".format(np.sum(has_servs)))\n",
     "print(\"{} sources with SWIRE flux\".format(np.sum(has_swire)))\n",
     "print(\"{} sources with SERVS and SWIRE flux\".format(np.sum(has_both)))\n",
+    "print(\"{} sources with CANDELS flux\".format(np.sum(has_candels)))\n",
     "\n",
     "has_servs_above_limit = has_servs.copy()\n",
     "has_servs_above_limit[has_servs] = master_catalogue['f_servs_irac1'][has_servs] > 2000\n",
     "\n",
-    "use_swire = (has_swire & ~has_servs) | (has_both & has_servs_above_limit)\n",
-    "use_servs = (has_servs & ~(has_both & has_servs_above_limit))\n",
+    "use_candels = has_candels\n",
+    "use_swire = ~has_candels & ((has_swire & ~has_servs) | (has_both & has_servs_above_limit))\n",
+    "use_servs = ~has_candels & ((has_servs & ~(has_both & has_servs_above_limit)))\n",
     "\n",
     "print(\"{} sources for which we use SERVS\".format(np.sum(use_servs)))\n",
     "print(\"{} sources for which we use SWIRE\".format(np.sum(use_swire)))\n",
+    "print(\"{} sources for which we use CANDELS\".format(np.sum(use_candels)))\n",
     "\n",
     "f_irac = np.full(len(master_catalogue), np.nan)\n",
     "f_irac[use_servs] = master_catalogue['f_servs_irac1'][use_servs]\n",
     "f_irac[use_swire] = master_catalogue['f_swire_irac1'][use_swire]\n",
+    "f_irac[use_candels] = master_catalogue['f_candels-irac_i1'][use_candels]\n",
     "\n",
     "ferr_irac = np.full(len(master_catalogue), np.nan)\n",
     "ferr_irac[use_servs] = master_catalogue['ferr_servs_irac1'][use_servs]\n",
     "ferr_irac[use_swire] = master_catalogue['ferr_swire_irac1'][use_swire]\n",
+    "ferr_irac[use_candels] = master_catalogue['ferr_candels-irac_i1'][use_candels]\n",
     "\n",
     "flag_irac = np.full(len(master_catalogue), False, dtype=bool)\n",
     "flag_irac[use_servs] = master_catalogue['flag_servs_irac1'][use_servs]\n",
     "flag_irac[use_swire] = master_catalogue['flag_swire_irac1'][use_swire]\n",
+    "flag_irac[use_candels] = master_catalogue['flag_candels-irac_i1'][use_candels]\n",
     "\n",
     "m_irac = np.full(len(master_catalogue), np.nan)\n",
     "m_irac[use_servs] = master_catalogue['m_servs_irac1'][use_servs]\n",
     "m_irac[use_swire] = master_catalogue['m_swire_irac1'][use_swire]\n",
+    "m_irac[use_candels] = master_catalogue['m_candels-irac_i1'][use_candels]\n",
     "\n",
     "merr_irac = np.full(len(master_catalogue), np.nan)\n",
     "merr_irac[use_servs] = master_catalogue['merr_servs_irac1'][use_servs]\n",
     "merr_irac[use_swire] = master_catalogue['merr_swire_irac1'][use_swire]\n",
+    "merr_irac[use_candels] = master_catalogue['merr_candels-irac_i1'][use_candels]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_irac, name=\"f_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_irac, name=\"ferr_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=m_irac, name=\"m_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=merr_irac, name=\"merr_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac1\"))\n",
+    "master_catalogue.add_column(Column(data=f_irac, name=\"f_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_irac, name=\"ferr_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=m_irac, name=\"m_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=merr_irac, name=\"merr_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac_i1\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_servs_irac1', 'f_swire_irac1', 'ferr_servs_irac1',\n",
     "                                 'ferr_swire_irac1', 'm_servs_irac1', 'flag_servs_irac1', 'm_swire_irac1',\n",
-    "                                 'merr_servs_irac1', 'merr_swire_irac1', 'flag_swire_irac1'])\n",
+    "                                 'merr_servs_irac1', 'merr_swire_irac1', 'flag_swire_irac1',\n",
+    "                                 \n",
+    "                                'f_candels-irac_i1',\n",
+    "                                 'ferr_candels-irac_i1',\n",
+    "                                 'm_candels-irac_i1',\n",
+    "                                 'merr_candels-irac_i1',\n",
+    "                                'flag_candels-irac_i1'])\n",
     "\n",
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[use_servs] = \"SERVS\"\n",
     "origin[use_swire] = \"SWIRE\"\n",
+    "origin[use_candels] = \"CANDELS\"\n",
     "irac_origin.add_column(Column(data=origin, name=\"IRAC1_total\"))"
    ]
   },
@@ -1093,10 +1119,10 @@
     "merr_ap_irac[use_servs] = master_catalogue['merr_ap_servs_irac2'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_ap_swire_irac2'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac2\"))\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac_i2\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_ap_servs_irac2', 'f_ap_swire_irac2', 'ferr_ap_servs_irac2',\n",
     "                                 'ferr_ap_swire_irac2', 'm_ap_servs_irac2', 'm_ap_swire_irac2',\n",
@@ -1131,52 +1157,69 @@
     "has_swire = ~np.isnan(master_catalogue['f_swire_irac2'])\n",
     "has_both = has_servs & has_swire\n",
     "\n",
+    "has_candels = ~np.isnan(master_catalogue['f_candels-irac_i2'])\n",
+    "\n",
     "print(\"{} sources with SERVS flux\".format(np.sum(has_servs)))\n",
     "print(\"{} sources with SWIRE flux\".format(np.sum(has_swire)))\n",
     "print(\"{} sources with SERVS and SWIRE flux\".format(np.sum(has_both)))\n",
+    "print(\"{} sources with CANDELS flux\".format(np.sum(has_candels)))\n",
     "\n",
     "has_servs_above_limit = has_servs.copy()\n",
     "has_servs_above_limit[has_servs] = master_catalogue['f_servs_irac2'][has_servs] > 2000\n",
     "\n",
-    "use_swire = (has_swire & ~has_servs) | (has_both & has_servs_above_limit)\n",
-    "use_servs = (has_servs & ~(has_both & has_servs_above_limit))\n",
+    "use_candels = has_candels\n",
+    "use_swire = ~has_candels & ((has_swire & ~has_servs) | (has_both & has_servs_above_limit))\n",
+    "use_servs = ~has_candels & ((has_servs & ~(has_both & has_servs_above_limit)))\n",
     "\n",
     "print(\"{} sources for which we use SERVS\".format(np.sum(use_servs)))\n",
     "print(\"{} sources for which we use SWIRE\".format(np.sum(use_swire)))\n",
+    "print(\"{} sources for which we use CANDELS\".format(np.sum(use_candels)))\n",
     "\n",
     "f_irac = np.full(len(master_catalogue), np.nan)\n",
     "f_irac[use_servs] = master_catalogue['f_servs_irac2'][use_servs]\n",
     "f_irac[use_swire] = master_catalogue['f_swire_irac2'][use_swire]\n",
+    "f_irac[use_candels] = master_catalogue['f_candels-irac_i2'][use_candels]\n",
     "\n",
     "ferr_irac = np.full(len(master_catalogue), np.nan)\n",
     "ferr_irac[use_servs] = master_catalogue['ferr_servs_irac2'][use_servs]\n",
     "ferr_irac[use_swire] = master_catalogue['ferr_swire_irac2'][use_swire]\n",
+    "ferr_irac[use_candels] = master_catalogue['ferr_candels-irac_i2'][use_candels]\n",
     "\n",
     "flag_irac = np.full(len(master_catalogue), False, dtype=bool)\n",
     "flag_irac[use_servs] = master_catalogue['flag_servs_irac2'][use_servs]\n",
     "flag_irac[use_swire] = master_catalogue['flag_swire_irac2'][use_swire]\n",
+    "flag_irac[use_candels] = master_catalogue['flag_candels-irac_i2'][use_candels]\n",
     "\n",
     "m_irac = np.full(len(master_catalogue), np.nan)\n",
     "m_irac[use_servs] = master_catalogue['m_servs_irac2'][use_servs]\n",
     "m_irac[use_swire] = master_catalogue['m_swire_irac2'][use_swire]\n",
+    "m_irac[use_candels] = master_catalogue['m_candels-irac_i2'][use_candels]\n",
     "\n",
     "merr_irac = np.full(len(master_catalogue), np.nan)\n",
     "merr_irac[use_servs] = master_catalogue['merr_servs_irac2'][use_servs]\n",
     "merr_irac[use_swire] = master_catalogue['merr_swire_irac2'][use_swire]\n",
+    "merr_irac[use_candels] = master_catalogue['merr_candels-irac_i2'][use_candels]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_irac, name=\"f_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_irac, name=\"ferr_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=m_irac, name=\"m_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=merr_irac, name=\"merr_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac2\"))\n",
+    "master_catalogue.add_column(Column(data=f_irac, name=\"f_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_irac, name=\"ferr_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=m_irac, name=\"m_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=merr_irac, name=\"merr_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac_i2\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_servs_irac2', 'f_swire_irac2', 'ferr_servs_irac2',\n",
     "                                 'ferr_swire_irac2', 'm_servs_irac2', 'flag_servs_irac2', 'm_swire_irac2',\n",
-    "                                 'merr_servs_irac2', 'merr_swire_irac2', 'flag_swire_irac2'])\n",
+    "                                 'merr_servs_irac2', 'merr_swire_irac2', 'flag_swire_irac2',\n",
+    "                                \n",
+    "                                'f_candels-irac_i2',\n",
+    "                                'ferr_candels-irac_i2',\n",
+    "                                'm_candels-irac_i2',\n",
+    "                                'merr_candels-irac_i2',\n",
+    "                                'flag_candels-irac_i2'])\n",
     "\n",
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[use_servs] = \"SERVS\"\n",
     "origin[use_swire] = \"SWIRE\"\n",
+    "origin[use_candels] = \"CANDELS\"\n",
     "irac_origin.add_column(Column(data=origin, name=\"IRAC2_total\"))"
    ]
   },
@@ -1189,6 +1232,19 @@
    "outputs": [],
    "source": [
     "irac_origin.write(\"{}/cdfs-swire_irac_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if '_candels-irac_' in col:\n",
+    "        master_catalogue[col].name = col.replace('_candels-irac_', '_irac_')"
    ]
   },
   {
