--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
@@ -73,7 +73,7 @@
     "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
-    "OUT_DIR = os.environ.get('OUT_DIR', \"./data/tiles\")\n",
+    "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -946,7 +946,7 @@
     "    \"{}/master_list_cross_ident_herschel-stripe-82{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
     "old_id_names =[\"shela_intid\",\"spies_intid\",\"decals_id\",\"des_id\"] \n",
-    "id_names.remove(old_id_names)\n",
+    "#id_names.remove(old_id_names)\n",
     "master_catalogue.remove_columns(old_id_names)"
    ]
   },
@@ -1122,7 +1122,31 @@
     "                               keys=survey[3]\n",
     "                            )\n",
     "    #print('Finished join')\n",
-    "    sub_catalogue.remove_columns(id_names)\n",
+    "    \n",
+    "    # Combine merge flags\n",
+    "    \n",
+    "    sub_catalogue['flag_merged'].name = 'flag_merged_tmp'\n",
+    "    flag_merged_columns = [column for column in sub_catalogue.colnames\n",
+    "                            if 'flag_merged' in column]\n",
+    "    \n",
+    "    flag_merged_column = np.zeros(len(sub_catalogue), dtype=bool)\n",
+    "    for column in flag_merged_columns:\n",
+    "        flag_merged_column |= sub_catalogue[column]\n",
+    "    \n",
+    "    sub_catalogue.add_column(Column(data=flag_merged_column, name=\"flag_merged\"))\n",
+    "    sub_catalogue.remove_columns(flag_merged_columns)\n",
+    "    sub_catalogue['flag_merged'].name = 'flag_merged_tmp'\n",
+    "    flag_merged_columns = [column for column in sub_catalogue.colnames\n",
+    "                            if 'flag_merged' in column]\n",
+    "    \n",
+    "    flag_merged_column = np.zeros(len(sub_catalogue), dtype=bool)\n",
+    "    for column in flag_merged_columns:\n",
+    "        flag_merged_column |= sub_catalogue[column]\n",
+    "    \n",
+    "    sub_catalogue.add_column(Column(data=flag_merged_column, name=\"flag_merged\"))\n",
+    "    sub_catalogue.remove_columns(flag_merged_columns)\n",
+    "    \n",
+    "    #Add flag fill values\n",
     "    \n",
     "    for col in sub_catalogue.colnames:\n",
     "        if (col.startswith(\"m_\") or col.startswith(\"merr_\") or col.startswith(\"f_\") or col.startswith(\"ferr_\")):\n",
@@ -1189,10 +1213,34 @@
     "        name=\"flag_optnir_det\")\n",
     "        )\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    sub_catalogue.write(\"{}/sub_catalogue_herschel-stripe-82{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
+    "    # Remove id names and write file\n",
+    "    sub_catalogue.remove_columns(id_names)\n",
+    "    sub_catalogue.write(\"{}/tiles/sub_catalogue_herschel-stripe-82{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to generate final catalogue\n",
+    "After this notebook has been run there will be a set of sub catalogues in data/tiles/\n",
+    "\n",
+    "These need to be stacked using stilts:\n",
+    "\n",
+    "<pre>\n",
+    "suffix=20180111\n",
+    "\n",
+    "ls ./data/tiles/sub_catalogue_herschel-stripe-82_$suffix_*.fits > ./data/tiles/fits_list_$suffix.lis\n",
+    "\n",
+    "stilts tcat in=@./data/tiles/fits_list_$suffix.lis out=./data/master_catalogue_herschel-stripe-82_$suffix.fits\n",
+    "</pre>\n",
+    "\n",
+    "For many purposes this file may be too large. In order to run checks and diagnostics we typically take a subset using something like:\n",
+    "\n",
+    "<pre>\n",
+    "stilts tpipe cmd='every 10' ./data/master_catalogue_herschel-stripe-82_$suffix.fits omode=out out=./data/master_catalogue_herschel-stripe-82_RANDOM10PCSAMPLE_$suffix.fits\n",
+    "</pre>"
    ]
   }
  ],
