--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -1459,7 +1459,10 @@
     " 'servs_intid',\n",
     " 'swire_intid']\n",
     "master_catalogue.remove_columns(old_id_names)\n",
-    "id_names.remove(old_id_names)"
+    "# The old id names will be added back in by \n",
+    "# the join so I leave them in the list here to be \n",
+    "# removed before the save of the sub catalogue\n",
+    "# id_names.remove(old_id_names)"
    ]
   },
   {
@@ -1709,6 +1712,30 @@
     "    sub_catalogue.remove_columns(id_names)\n",
     "    sub_catalogue.write(\"{}/tiles/sub_catalogue_xmm-lss{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to generate final catalogue\n",
+    "After this notebook has been run there will be a set of sub catalogues in data/tiles/\n",
+    "\n",
+    "These need to be stacked using stilts:\n",
+    "\n",
+    "<pre>\n",
+    "suffix=20180111\n",
+    "\n",
+    "ls ./data/tiles/sub_catalogue_xmm-lss_$suffix_*.fits > ./data/tiles/fits_list_$suffix.lis\n",
+    "\n",
+    "stilts tcat in=@./data/tiles/fits_list_$suffix.lis out=./data/master_catalogue_xmm-lss_$suffix.fits\n",
+    "</pre>\n",
+    "\n",
+    "For many purposes this file may be too large. In order to run checks and diagnostics we typically take a subset using something like:\n",
+    "\n",
+    "<pre>\n",
+    "stilts tpipe cmd='every 10' ./data/master_catalogue_xmm-lss_$suffix.fits omode=out out=./data/master_catalogue_xmm-lss_RANDOM10PCSAMPLE_$suffix.fits\n",
+    "</pre>"
    ]
   }
  ],
